Changed domain name

--- a/.github/workflows/ci-storage-master.yml
+++ b/.github/workflows/ci-storage-master.yml
@@ -9,7 +9,7 @@ on:
 env:
   BUCKET_NAME: notarise-functions-transfer-document-storage-stg
   DOMAIN: api.functions.notarizesg.com
-  CERTIFICATE_DOMAIN: '*.notarizesg.com'
+  CERTIFICATE_DOMAIN: 'notarizesg.com'
 
 jobs:
   test:
