--- a/.github/workflows/ci-storage-master.yml
+++ b/.github/workflows/ci-storage-master.yml
@@ -52,8 +52,8 @@ jobs:
       run: npm install -g serverless
     - name: Serverless AWS authentication
       run: sls config credentials --account_id ${{ secrets.STAGING_ACCOUNT_ID }} --provider aws --key ${{ secrets.STAGING_AWS_ACCESS_KEY_ID }} --secret ${{ secrets.STAGING_AWS_SECRET_ACCESS_KEY }}
-    - name: Serverless create domain
-      run: sls create_domain --account_id ${{ secrets.STAGING_ACCOUNT_ID }} --stage stg
+    # - name: Serverless create domain
+      # run: sls create_domain --account_id ${{ secrets.STAGING_ACCOUNT_ID }} --stage stg
     - name: serverless deploy
       run: sls deploy --account_id ${{ secrets.STAGING_ACCOUNT_ID }} --stage stg
 
