--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
     "raw-loader": "^4.0.1",
+    "serverless-attach-permission-boundary": "^0.1.0",
     "serverless-domain-manager": "^3.3.2",
     "serverless-offline": "6.1.4",
     "serverless-s3-local": "^0.5.4",
