--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "deploy:verify": "cd ./src/verify && sls deploy",
     "s3-local-setup": "cd ./src/storage && sls plugin install --name serverless-s3-local",
     "sls-config-check": "npm-run-all --sequential sls-config-check::*",
-    "sls-config-check:email": "cd ./src/email && sls print",
-    "sls-config-check:storage": "cd ./src/storage && sls print",
-    "sls-config-check:verify": "cd ./src/verify && sls print",
+    "sls-config-check:email": "cd ./src/email && sls print --account_id PLACEHOLDER",
+    "sls-config-check:storage": "cd ./src/storage && sls print --account_id PLACEHOLDER",
+    "sls-config-check:verify": "cd ./src/verify && sls print --account_id PLACEHOLDER",
     "test": "jest --testPathPattern=src",
     "test-watch": "jest --watch",
     "e2etest": "jest --testPathPattern=test/e2e",
