Fixed bucket name and added endpoint type to regional

--- a/src/storage/serverless.yml
+++ b/src/storage/serverless.yml
@@ -1,6 +1,7 @@
 service: notarise-function-storage
 provider:
   name: aws
+  endpointType: REGIONAL
   apiKeys:
     - ${self:provider.stage}-storage-api-key
   runtime: nodejs12.x
