Added custom cloudwatch role
Wrong indentation for restApi role

Removed boolean

Changed to account id

--- a/src/storage/serverless.yml
+++ b/src/storage/serverless.yml
@@ -14,7 +14,9 @@ provider:
     apiGateway: true
   permissionsBoundary: 'arn:aws:iam::${opt:account_id}:policy/GCCIAccountBoundary'
   logs:
-    restApi: true
+    restApi:
+      role: arn:aws:iam::${opt:account_id}:role/serverlessApiGatewayCloudwatchRole
+      roleManagedExternally: true
   deploymentBucket:
     name: notarise-serverless-deployment
   environment:
