Removed managed externally to try

--- a/src/storage/serverless.yml
+++ b/src/storage/serverless.yml
@@ -16,7 +16,7 @@ provider:
   logs:
     restApi:
       role: arn:aws:iam::${opt:account_id}:role/serverlessApiGatewayCloudwatchRole
-      roleManagedExternally: true
+      # roleManagedExternally: true
   deploymentBucket:
     name: notarise-serverless-deployment
   environment:
