--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "prettier": "^1.19.1",
     "raw-loader": "^4.0.1",
     "serverless-attach-permission-boundary": "^0.1.0",
+    "serverless-dependson-plugin": "^1.1.2",
     "serverless-domain-manager": "^3.3.2",
     "serverless-offline": "6.1.4",
     "serverless-s3-local": "^0.5.4",
