--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "create-domain:verify": "cd ./src/verify && sls create_domain",
     "dev": "npm-run-all --parallel dev:*",
     "dev:email": "cd ./src/email && sls offline start",
-    "dev:storage": "cd ./src/storage && sls offline start",
+    "dev:storage": "cd ./src/storage && IS_OFFLINE=true sls offline start --account_id PLACEHOLDER",
     "dev:verify": "cd ./src/verify && sls offline start",
     "deploy": "npm-run-all --sequential \"deploy:* -- {@}\" --",
     "deploy:email": "cd ./src/email && sls deploy",
@@ -30,15 +30,15 @@
   "author": "Raymond Yeh <yehjxraymond@gmail.com> (http://geek.sg)",
   "license": "ISC",
   "dependencies": {
-    "@govtechsg/oa-encryption": "^1.3.0",
-    "@govtechsg/open-attestation": "^1.1.42",
-    "@govtechsg/opencerts-verify": "^1.2.0",
+    "@govtechsg/oa-encryption": "^1.3.2",
+    "@govtechsg/oa-verify": "^6.0.0",
+    "@govtechsg/open-attestation": "^4.0.0",
     "aws-sdk": "^2.590.0",
-    "lodash": "^4.17.13",
+    "lodash": "^4.17.20",
     "middy": "^0.24.0",
-    "node-fetch": "^2.2.0",
+    "node-fetch": "^2.6.1",
     "nodemailer": "^4.6.8",
-    "serverless": "^1.59.3",
+    "serverless": "^2.11.1",
     "serverless-dotenv-plugin": "2.4.2",
     "serverless-http": "^1.6.0",
     "uuid": "^3.3.2"
