--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "dev:email": "cd ./src/email && sls offline start",
     "dev:storage": "cd ./src/storage && sls offline start",
     "dev:verify": "cd ./src/verify && sls offline start",
+    "dev:faucet": "cd ./src/faucet && sls offline start",
     "deploy": "npm-run-all --sequential \"deploy:* -- {@}\" --",
     "deploy:email": "cd ./src/email && sls deploy",
     "deploy:storage": "cd ./src/storage && sls deploy",
     "deploy:verify": "cd ./src/verify && sls deploy",
+    "deploy:faucet": "cd ./src/faucet && sls deploy",
     "s3-local-setup": "cd ./src/storage && sls plugin install --name serverless-s3-local",
     "sls-config-check": "npm-run-all --sequential sls-config-check::*",
     "sls-config-check:email": "cd ./src/email && sls print",
     "sls-config-check:storage": "cd ./src/storage && sls print",
     "sls-config-check:verify": "cd ./src/verify && sls print",
+    "sls-config-check:faucet": "cd ./src/faucet && sls print",
     "test": "jest --testPathPattern=src",
     "test-watch": "jest --watch",
     "e2etest": "jest --testPathPattern=test/e2e",
