feat: ether faucet

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,4 @@ BUCKET_NAME=opencerts-functions-transfer-document-storage
 OBJECT_TTL=31
 DISABLE_DOMAIN=false
 ENABLE_STORAGE_UPLOAD_API_KEY=false
+FAUCET_PRIVATE_KEY=<INSERT_KEY>
