--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@govtechsg/open-attestation": "^1.1.42",
     "@govtechsg/opencerts-verify": "^1.0.4",
     "aws-sdk": "^2.590.0",
+    "ethers": "^5.0.31",
     "lodash": "^4.17.13",
     "middy": "^0.24.0",
     "node-fetch": "^2.2.0",
@@ -62,7 +63,7 @@
     "prettier": "^1.19.1",
     "raw-loader": "^4.0.1",
     "serverless-domain-manager": "^3.3.2",
-    "serverless-offline": "6.1.4",
+    "serverless-offline": "6.8.0",
     "serverless-s3-local": "^0.5.4",
     "serverless-s3-remover": "^0.6.0",
     "serverless-webpack": "^5.3.2",
