--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@govtechsg/opencerts-verify": "^1.0.4",
     "aws-sdk": "^2.590.0",
     "ethers": "^5.0.31",
+    "ethers-aws-kms-signer": "^1.0.0",
     "lodash": "^4.17.13",
     "middy": "^0.24.0",
     "node-fetch": "^2.2.0",
