--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "license": "ISC",
   "dependencies": {
     "@govtechsg/oa-encryption": "^1.3.0",
+    "@govtechsg/oa-verify": "^7.3.3",
     "@govtechsg/open-attestation": "^1.1.42",
     "@govtechsg/opencerts-verify": "^1.0.4",
     "aws-sdk": "^2.590.0",
