--- a/src/email/serverless.yml
+++ b/src/email/serverless.yml
@@ -1,5 +1,6 @@
 service: mail
 provider:
+  lambdaHashingVersion: "20201221"
   name: aws
   runtime: nodejs12.x
   stage: "${opt:stage, 'stg'}"
@@ -27,13 +28,13 @@ custom:
     lambdaPort: 3002
     httpPort: 3000
   isManagedDomain:
-    false: 'true' # To negate the environment variable DISABLE_DOMAIN
-    true: 'false' # if you know of a way to do conditionals please change this
+    false: "true" # To negate the environment variable DISABLE_DOMAIN
+    true: "false" # if you know of a way to do conditionals please change this
   customDomain:
-    domainName: "${env:DOMAIN}" # Change this to your domain.
+    domainName: ${env:DOMAIN, "example.com"} # Change this to your domain.
     basePath: "email" # This will be prefixed to all routes
     stage: ${self:provider.stage}
-    certificateName: "${env:CERTIFICATE_DOMAIN}"
+    certificateName: ${env:CERTIFICATE_DOMAIN, "example.com"}
     createRoute53Record: true
     endpointType: "regional"
     securityPolicy: tls_1_2
