--- a/src/verify/serverless.yml
+++ b/src/verify/serverless.yml
@@ -1,5 +1,6 @@
 service: verify
 provider:
+  lambdaHashingVersion: "20201221"
   name: aws
   runtime: nodejs12.x
   stage: "${opt:stage, 'stg'}"
@@ -28,13 +29,13 @@ custom:
     httpPort: 4000
   NETWORK: ${env:NETWORK, "ropsten"}
   isManagedDomain:
-    false: 'true' # To negate the environment variable DISABLE_DOMAIN
-    true: 'false' # if you know of a way to do conditionals please change this
+    false: "true" # To negate the environment variable DISABLE_DOMAIN
+    true: "false" # if you know of a way to do conditionals please change this
   customDomain:
-    domainName: "${env:DOMAIN}" # Change this to your domain.
+    domainName: ${env:DOMAIN, "example.com"} # Change this to your domain.
     basePath: "verify" # This will be prefixed to all routes
     stage: ${self:provider.stage}
-    certificateName: "${env:CERTIFICATE_DOMAIN}"
+    certificateName: ${env:CERTIFICATE_DOMAIN, "example.com"}
     createRoute53Record: true
     endpointType: "regional"
     securityPolicy: tls_1_2
