--- a/src/storage/serverless.yml
+++ b/src/storage/serverless.yml
@@ -24,10 +24,16 @@ provider:
       statements:
         - Effect: Allow
           Action:
-            ["s3:putObject", "s3:upload", "s3:deleteObject", "s3:getObject"]
+            - s3:putObject
+            - s3:upload
+            - s3:deleteObject
+            - s3:getObject
           Resource:
-            - "Fn::Join":
-                ["", ["arn:aws:s3:::", { "Ref": "DeployedBucket" }, "/*"]]
+            Fn::Join:
+              - ''
+              - 'arn:aws:s3:::'
+                - Ref: DeployedBucket
+                - '/*'
 resources:
   Resources:
     DeployedBucket:
