--- a/src/storage/serverless.yml
+++ b/src/storage/serverless.yml
@@ -30,10 +30,10 @@ provider:
             - s3:getObject
           Resource:
             Fn::Join:
-              - ''
-              - 'arn:aws:s3:::'
+              - ""
+              - - "arn:aws:s3:::"
                 - Ref: DeployedBucket
-                - '/*'
+                - "/*"
 resources:
   Resources:
     DeployedBucket:
