chore: update serverless.yml

--- a/src/storage/serverless.yml
+++ b/src/storage/serverless.yml
@@ -22,12 +22,12 @@ provider:
   iam:
     role:
       statements:
-        - Effect: Allow
+        - Effect: "Allow"
           Action:
-            - s3:putObject
-            - s3:upload
-            - s3:deleteObject
-            - s3:getObject
+            - "s3:putObject"
+            - "s3:upload"
+            - "s3:deleteObject"
+            - "s3:getObject"
           Resource:
             Fn::Join:
               - ""
