chore: changed ref name

--- a/src/storage/serverless.yml
+++ b/src/storage/serverless.yml
@@ -32,7 +32,7 @@ provider:
             Fn::Join:
               - ""
               - - "arn:aws:s3:::"
-                - Ref: DeployedBucket
+                - Ref: ServerlessDeploymentBucket
                 - "/*"
 resources:
   Resources:
