--- a/src/storage/serverless.yml
+++ b/src/storage/serverless.yml
@@ -1,5 +1,4 @@
 service: storage
-disabledDeprecations: CLI_OPTIONS_SCHEMA # https://github.com/sinofseven/serverless-s3-remover/issues/21, https://www.serverless.com/framework/docs/deprecations/#CLI_OPTIONS_SCHEMA
 provider:
   lambdaHashingVersion: "20201221"
   name: aws
@@ -117,17 +116,17 @@ custom:
   webpack:
     includeModules:
       packagePath: "../../package.json"
-  enableBucketDeletionPrompt:
-    prod: true # we don't want these buckets in these stages to be deleted without a prompt
-    stg: true
-  remover:
-    buckets:
-      - ${self:custom.BUCKET_NAME}
-    prompt: ${self:custom.disableBucketDeletingPrompt.${self:provider.stage}, false}
+  # enableBucketDeletionPrompt:
+  #   prod: true # we don't want these buckets in these stages to be deleted without a prompt
+  #   stg: true
+  # remover:
+  #   buckets:
+  #     - ${self:custom.BUCKET_NAME}
+  #   prompt: ${self:custom.disableBucketDeletingPrompt.${self:provider.stage}, false}
 plugins:
   - serverless-dotenv-plugin
   - serverless-s3-local
-  - serverless-s3-remover
+  # - serverless-s3-remover
   - serverless-offline
   - serverless-domain-manager
   - serverless-webpack
