--- a/src/storage/serverless.yml
+++ b/src/storage/serverless.yml
@@ -116,13 +116,13 @@ custom:
   webpack:
     includeModules:
       packagePath: "../../package.json"
-  # enableBucketDeletionPrompt:
-  #   prod: true # we don't want these buckets in these stages to be deleted without a prompt
-  #   stg: true
-  # remover:
-  #   buckets:
-  #     - ${self:custom.BUCKET_NAME}
-  #   prompt: ${self:custom.disableBucketDeletingPrompt.${self:provider.stage}, false}
+  enableBucketDeletionPrompt:
+    prod: true # we don't want these buckets in these stages to be deleted without a prompt
+    stg: true
+  remover:
+    buckets:
+      - ${self:custom.BUCKET_NAME}
+    prompt: ${self:custom.disableBucketDeletingPrompt.${self:provider.stage}, false}
 plugins:
   - serverless-dotenv-plugin
   - serverless-s3-local
