--- a/src/storage/serverless.yml
+++ b/src/storage/serverless.yml
@@ -126,7 +126,7 @@ custom:
 plugins:
   - serverless-dotenv-plugin
   - serverless-s3-local
-  # - serverless-s3-remover
+  - serverless-s3-remover
   - serverless-offline
   - serverless-domain-manager
   - serverless-webpack
